Actions
Bug #12097
closedsun_fc: control reaches end of non-void function
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors with gcc 8:
../common/Sun_fcScsiReadCapacityV2.cc:90:1: error: control reaches end of non-void function [-Werror=return-type] } ^ ../common/Sun_fcScsiInquiryV2.cc:94:1: error: control reaches end of non-void function [-Werror=return-type] } ^ cc1plus: all warnings being treated as errors
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 88f236be915e7011e2e34d380f6538ccdb24885f
commit 88f236be915e7011e2e34d380f6538ccdb24885f Author: Toomas Soome <tsoome@me.com> Date: 2019-12-23T07:55:43.000Z 12097 sun_fc: control reaches end of non-void function Reviewed by: C Fraire <cfraire@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions