usr/src/lib/sun_fc/common/Sun_fcScsiInquiryV2.cc
@@ -53,7 +53,7 @@ extern "C" {
  * @param	    responseBuffer User-allocated response buffer
  * @param	    responseSize Size of User-allocated response buffer
  * @param	    scsiStatus User-allocated scsi status byte
- * 
+ *
  * @doc		    This routine will attempt a limited number of retries
  *		    When busy or again errors are encountered.
  */
@@ -91,6 +91,7 @@ Sun_fcScsiInquiryV2(HBA_HANDLE handle, HBA_WWN portWWN, HBA_WWN targetPortWWN,
 		return (HBA_STATUS_ERROR);
 	    }
 	}
+	return (HBA_STATUS_ERROR_TRY_AGAIN);
 }
 #ifdef	__cplusplus
 }
